--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,3 +62,46 @@ ul{
 .pagination {
     text-align: center;
 }
+
+.scrolltop {
+	display:none;
+	width:100%;
+	margin:0 auto;
+	position:fixed;
+	bottom:1rem;
+	right:1rem;	
+}
+.scroll {
+	position:absolute;
+	right:1rem;
+	bottom:1rem;
+	background: transparent;
+	padding:1rem;
+	text-align: center;
+	margin: 0 0 0 0;
+	cursor:pointer;
+	transition: 0.5s;
+	-moz-transition: 0.5s;
+	-webkit-transition: 0.5s;
+	-o-transition: 0.5s; 	
+}
+.scroll:hover {
+	text-shadow: 0 0 1rem red;
+	transition: 0.5s;
+	-moz-transition: 0.5s;
+	-webkit-transition: 0.5s;
+	-o-transition: 0.5s; 		
+}
+
+.scroll .fa {
+	font-size:2rem;
+	transition: 0.5s;
+	-moz-transition: 0.5s;
+	-webkit-transition: 0.5s;
+	-o-transition: 0.5s; 	
+}
+
+.icon {
+    color: #101010;
+    padding: 0.5rem;
+}
